# catholic-map

./: .gitignore  ROOT_README.md  package-lock.json  package.json
agent/: main.py  pyproject.toml
agent/app/: __init__.py
agent/app/api/: __init__.py  generate.py
agent/app/models/: generate_models.py
agent/graph/: graph.py
agent/graph/models/: __init__.py  entity_models.py  religion_models.py  territory_models.py
agent/graph/nodes/: __init__.py  boundaries_node.py  entities_territories_node.py  entity_node.py  religion_node.py  result_node.py  territory_node.py
agent/graph/prompts/: __init__.py  entity_prompts.py  religion_prompts.py  territory_prompts.py
agent/graph/states/: __init__.py  agent_state.py  entity_state.py  religion_state.py  territory_state.py
agent/lib/: __init__.py  llm.py
agent/scripts/: seed_territories.py
agent/tools/: __init__.py  api_tool.py  geojson_tool.py  search_tool.py
prisma/: schema.prisma
repositories/: entitiesTerritoriesRepository.ts  entityRepository.ts  religionRepository.ts  territoryRepository.ts
schemas/: entitiesTerritoriesSchema.ts  entitySchema.ts  religionSchema.ts
services/: entitiesTerritoriesService.ts  entityService.ts  religionService.ts  territoryService.ts
types/entities/: types.ts
types/entitiesTerritories/: types.ts
types/map/: types.ts
types/territories/: types.ts
web/: package-lock.json
web/lib/: prisma.ts
web/prisma/: schema.prisma
web/repositories/: territoryRepository.ts
web/schemas/: territorySchema.ts
web/services/: entityService.ts  territoryService.ts
(+11 files in other folders)
